<resources>
    <string name="app_name">BuscaIdealista</string>
    <string name="title_activity_maps">Mapa Idealista</string>
    <string name="preferencias">mis_preferencias</string>
    <string name="placeholder">Placeholder</string>
    <string name="direccion">Dirección: %s</string>
    <string name="miniatura_vivienda_descripcion">miniatura_vivienda</string>
    <string name="espacio">espacio: %s m2</string>
    <string name="precio">Precio: %s€</string>
    <string name="venta_alquiler">Venta o Alquiler</string>
    <string name="venta">Venta</string>
    <string name="alquiler">Alquiler</string>
    <string name="listado_viviendas">Listado Viviendas</string>
    <string name="toast_esperar_cargar_viviendas">Espera a que se carguen las viviendas</string>
    <string name="latitud">Latitud: %sº</string>
    <string name="longitud">Longitud: %sº</string>

</resources>