<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        android:id="@+id/card"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
                android:id="@+id/miniatura_imagen"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:src="@mipmap/ic_launcher"
                android:layout_gravity="center"
                android:contentDescription="@string/miniatura_vivienda_descripcion"
            />

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_general"
                android:orientation="vertical"
                >
            />
            <TextView
                    android:id="@+id/direccion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/direccion"/>
            <TextView
                    android:id="@+id/espacio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/espacio"/>

            <TextView
                    android:id="@+id/precio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/precio"/>

        </LinearLayout>

    </LinearLayout>




</androidx.cardview.widget.CardView>